Bugfix: Game List - Table Scroll, Option Button wrap and search icon hand UI

--- a/src/App.scss
+++ b/src/App.scss
@@ -130,7 +130,7 @@
     .tooltip-content {
       visibility: hidden;
       position: absolute;
-      z-index: 1;
+      z-index: 30;
       width: fit-content;
       background-color: $color_black;
       color: $color_white;
